# raytracing

./: .gitignore  Cargo.toml  expanded.rs  image.ppm
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
headless/: Cargo.toml
headless/src/: buffer.rs  main.rs
raytracer/: Cargo.toml
raytracer/src/: camera.rs  color.rs  hit.rs  image_writer.rs  lib.rs  material.rs  ray.rs  scene.rs  sphere.rs  vector.rs
src/: camera.rs  color.rs  hit.rs  image_writer.rs  main.rs  material.rs  ray.rs  scene.rs  sphere.rs  vector.rs
